--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 BOT_TOKEN=6739521733:AAFg6sWfzb61eBs5db8zcu2hr-DFJCmcgtE
-DB_NAME=task_4
+DB_NAME=postgres
 DB_PASSWORD=1
 DB_HOST=localhost
 DB_PORT=5432
