--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ version: '3.11'
 services:
   bot:
     build: .
+    #image shokhmee/exam_shohjahon
     restart: always
     container_name: exam_shohjahon
     environment:
